--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,12 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.8.5 (August 24, 2010)
+-------------------------------
+- Improved save/restore support
+- Option to view and change disk cache mode
+- Configurable VNC keygrab sequence (Michal Novotny)
+
 Release 0.8.4 (March 24, 2010)
 ------------------------------
 - 'Import' install option, to create a VM around an existing OS image
